[FEATURE] Add route to get current user and adapt security stuff
