# apps/backend/src/main/java/ch/heig/pdg/backend/presentation/UserController.java
@@ -4,6 +4,8 @@ import ch.heig.pdg.backend.api.UserApi;
 import ch.heig.pdg.backend.dto.UserDTO;
 import ch.heig.pdg.backend.entities.Location;
 import ch.heig.pdg.backend.entities.User;
+import ch.heig.pdg.backend.security.annotations.AuthenticationRequired;
+import ch.heig.pdg.backend.security.utils.CurrentUser;
 import ch.heig.pdg.backend.services.UserService;
 import ch.heig.pdg.backend.utils.HugoSearchFilter;
 import jakarta.servlet.http.HttpServletRequest;
@@ -59,6 +61,15 @@ public class UserController extends AbstractController implements ch.heig.pdg.ba
     public ResponseEntity<UserDTO> updateUser(Integer id, UserDTO userDTO) {
         return new ResponseEntity<>(
                 this.userService.updateUser(id, userDTO),
+                HttpStatus.OK
+        );
+    }
+
+    @AuthenticationRequired
+    @Override
+    public ResponseEntity<UserDTO> getCurrentUser() {
+        return new ResponseEntity<>(
+                this.userService.getCurrentUser(),
                 HttpStatus.OK
         );
     }
